cluster/apps/external-services/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app ha
  namespace: external-services
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  type: ExternalName
  externalName: ha.${SECRET_PRIVATE_DOMAIN}.
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8123
